# nexus-events

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
demo-app/: Cargo.toml  README.md
demo-app/src/: main.rs
examples/: demo.rs
macros/: Cargo.toml  Makefile
macros/src/: lib.rs
macros/tests/: derive_macro_tests.rs  event_handler_tests.rs  event_sender_tests.rs
nexus-events/: Cargo.toml
nexus-events-macros/: Cargo.toml
nexus-events-macros/src/: lib.rs
nexus-events/src/: lib.rs
nexus-events/src/core/: mod.rs
src/: lib.rs
src/core/: bus.rs  error.rs  event.rs  handler.rs  mod.rs  shared.rs  types.rs
src/emit/: mod.rs  sender.rs
src/macros/: define_event.rs  mod.rs
src/subscriber/: _internal.rs  event_subscriber.rs  handler_info.rs  internal.rs  mod.rs  registration.rs  registration_helper.rs  registry.rs  subscription.rs
src/tests/: basic_tests.rs  benchmarks.rs  integration_tests.rs  macro_tests.rs  memory_leak.rs  mod.rs  thread_safety.rs
tests/: api_tests.rs  basic_tests.rs  integration_tests.rs  memory_leak.rs  mod.rs  thread_safety.rs
