[package]
name = "nexus-events"
version = "0.1.0"
edition = "2021"
description = "Cute Little event system for Turbo engine game development"
authors = ["Beatrice Roe <beatrice@glitch.land>"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "macros"
]

[dependencies]
lazy_static = "1.4"
once_cell = "1.17"
nexus-events-macros = { path = "./macros", version = "0.1.0" }