[package]
name = "nexus-events-macros"
version = "0.1.0"
edition = "2021"
authors = ["Beatrice Roe <beatrice@glitch.land>"]
description = "Macros to support nexus-events crate"
license = "MIT"
repository = "https://github.com/glitchland/nexus-events"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nexus-events = { path = "../nexus-events" }